[tool.poetry]
name = "janestreet"
version = "0.1.0"
description = ""
authors = ["Evgeniia <eivolkova3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
polars = "1.9.0"
scikit-learn = "^1.5.2"
numpy = "1.26.4"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
wandb = "^0.18.5"
python-dotenv = "^1.0.1"
kaggle = "^1.6.17"
grpcio = "^1.67.0"
pyarrow = "^17.0.0"
pytz = "^2024.2"
torch = "2.4.0"
torch_optimizer = "0.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
